[package]
name = "ml-runner"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = "0.25"
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "copy-dylibs"] }
walkdir = "2"

# HTTP for GitHub releases (model download + self-update). rustls (ureq's default TLS)
# keeps every platform free of OpenSSL and other system libraries.
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
self-replace = "1"
