[package]
name = "ml-runner"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = "0.25"
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "copy-dylibs"] }
walkdir = "2"

# HTTP for GitHub releases (model download + self-update). rustls (ureq's default TLS)
# keeps every platform free of OpenSSL and other system libraries.
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
self-replace = "1"

# Archive extraction for self-update (Windows .zip, Linux .tar.gz). Not needed on macOS,
# which installs via a signed .pkg and does not self-replace. All pure Rust (no system libs).
[target.'cfg(not(target_os = "macos"))'.dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
